# tmm_fast

./: .gitignore  README.md  cuda_tester.py  environment.yml  example.py  example_gym.py  example_inc_tmm.py  example_tmm.py  meta.yaml  plotting_helper.py  pyproject.toml  requirements.txt  setup.py  test.txt  tmm_fast_core.py  tmm_fast_torch.py  vectorized_tmm_dispersive_multistack.py
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: plotting_helper-checkpoint.py  tmm_fast_core-checkpoint.py
gym_multilayerthinfilm/: LICENSE  README.md  __init__.py  gym_class.py  gym_environment_example.py  gym_multilayerthinfilm.yml  setup.py
tests/: test_coherent.py  test_incoherent.py
tmm_fast/: __init__.py  example_gym.py  example_tmm.py  plotting_helper.py  tmm_fast_torch.py  vectorized_incoherent_tmm.py  vectorized_tmm_dispersive_multistack.py
tmm_fast/gym_multilayerthinfilm/: README.md  __init__.py  gym_class.py
tmm_fast/materials/: nAu.txt  nNb2O5.txt  nSiO2.txt
