[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tmm_fast"
version = "0.2.1"
authors = [
    {name = "Alexander Luce", email = "alexander.luce@ams-osram.com"},
    {name = "Heribert Wankerl"},
]
description = 'tmm_fast is a lightweight package to speed up optical planar multilayer thin-film device computation.'
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "torch>1.9",
    "matplotlib",
    "gymnasium",
]
